# beam_agent

./: LICENSE  README.md  install.ps1  install.sh  pyproject.toml  setup_mimo.sh  setup_phi4.sh  setup_qwen27b.sh  setup_runpod.sh
.claude/: settings.local.json
.github/workflows/: build-release.yml
beam_node_agent/: __main__.py  beam_node_agent.py  config.py  main.py  node_identity.py  ollama_wrapper.py  petals_wrapper.py  service.py
beam_node_agent/tui/: app.py  dashboard_screen.py  log_parser.py  setup_screen.py
docs/: api-reference.md  configuration.md  node-agent-setup.md  privacy-policy.md  terms-of-service.md  troubleshooting.md  whitepaper.md
scripts/: patch_petals_models.py  renter_quickstart.py
